refactor: reorganize type system and improve schema alignment
Major refactoring of the type system to better align with GraphQL schema
and improve code organization:

- Extract SQL and Version types from not_implemented.py into dedicated
  modules (sql.py, version.py)
- Add created_at/updated_at timestamp fields to StashObject base class
- Remove async_lru_cache implementation from client_helpers.py
- Reorganize and update type definitions across all modules to match
  schema structure
- Add new types: SQLExecResult, SQLQueryResult, LatestVersion, Version,
  BulkSceneUpdateInput, BulkImageUpdateInput, BulkSceneMarkerUpdateInput
- Update exports in types/__init__.py to include new types
- Fix Python version constraint in pyproject.toml (>=3.12,<4.0)
- Update type imports and references across client mixins
- Improve type documentation with schema references

This refactoring eliminates the not_implemented.py placeholder and
establishes proper module organization for type definitions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "gql[httpx,websockets] (>=4.0.0)",
     "websocket-client (>=1.8.0)",
@@ -16,7 +16,7 @@ dependencies = [
     "httpx-retries (>=0.4.3)",
     "pydantic (>=2.6.4)",
     "pydantic-extra-types (>=2.10.6)",
-    "multidict (>=6.7.0)"
+    "multidict (>=6.7.0)",
 ]
 
 [dependency-groups]
