--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -49,20 +49,106 @@ jobs:
           poetry run ruff check .
           poetry run ruff format --check .
 
-  test:
-    runs-on: ${{ matrix.os }}
+  test-self-hosted:
+    runs-on: [self-hosted, Linux, ARM64]
     needs: lint
+    timeout-minutes: 15
+    continue-on-error: true
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.12", "3.13"]
-        os: [[self-hosted, macOS, ARM64]]
-        include:
-          # Fallback to GitHub-hosted if self-hosted unavailable
-          - python-version: "3.12"
-            os: ubuntu-latest
-          - python-version: "3.13"
-            os: ubuntu-latest
+
+    services:
+      stash:
+        image: stashapp/stash:development
+        ports:
+          - 9999:9999
+        env:
+          STASH_STASH: /data/
+          STASH_GENERATED: /generated/
+          STASH_METADATA: /metadata/
+          STASH_CACHE: /cache/
+        volumes:
+          - /tmp/stash-config:/root/.stash
+          - /tmp/stash-data:/data
+        options: >-
+          --health-cmd "curl -f http://localhost:9999/graphql || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
+          --health-start-period 30s
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v5
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ runner.arch }}-py${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            venv-${{ runner.os }}-${{ runner.arch }}-py${{ matrix.python-version }}-
+
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --with dev
+
+      - name: Wait for Stash to be ready
+        run: |
+          echo "Waiting for Stash GraphQL endpoint..."
+          for i in {1..30}; do
+            if curl -sf http://localhost:9999/graphql -H "Content-Type: application/json" -d '{"query": "{ version { build_time } }"}' > /dev/null 2>&1; then
+              echo "✓ Stash is ready!"
+              break
+            fi
+            echo "Attempt $i/30: Stash not ready yet, waiting..."
+            sleep 2
+          done
+
+      - name: Run tests with pytest
+        run: |
+          poetry run pytest --cov=. --cov-report=xml --cov-report=term-missing --junitxml=junit.xml -o junit_family=legacy
+        env:
+          STASH_URL: http://localhost:9999/graphql
+
+      - name: Upload coverage to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
+          verbose: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  test-fallback:
+    runs-on: ubuntu-latest
+    needs: [lint, test-self-hosted]
+    if: ${{ failure() || cancelled() }}
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.12", "3.13"]
 
     services:
       stash:
