--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -83,6 +83,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Remove old Poetry installation
+        run: |
+          rm -rf ~/.local/share/pypoetry ~/.local/bin/poetry ~/.local/venv
+        continue-on-error: true
+
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -117,7 +122,7 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          poetry run pytest --cov=. --cov-report=xml --cov-report=term-missing --junitxml=junit.xml -o junit_family=legacy
+          poetry run pytest --cov=. --cov-report=xml --cov-report=term-missing --junitxml=junit.xml -o junit_family=legacy -n auto
         env:
           STASH_URL: http://localhost:9999/graphql
 
@@ -170,6 +175,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Remove old Poetry installation
+        run: |
+          rm -rf ~/.local/share/pypoetry ~/.local/bin/poetry ~/.local/venv
+        continue-on-error: true
+
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -204,7 +214,7 @@ jobs:
 
       - name: Run tests with pytest
         run: |
-          poetry run pytest --cov=. --cov-report=xml --cov-report=term-missing --junitxml=junit.xml -o junit_family=legacy
+          poetry run pytest --cov=. --cov-report=xml --cov-report=term-missing --junitxml=junit.xml -o junit_family=legacy -n auto
         env:
           STASH_URL: http://localhost:9999/graphql
 
