--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -78,16 +78,24 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Clean up leftover Python installations
+        run: |
+          # Remove leftover pipx installations from previous runs
+          rm -rf ${{ runner.temp }}/pipx || true
+        continue-on-error: true
+
       - name: Set up Python ${{ matrix.python-version }}
+        id: setup-python
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry via pipx
         run: |
-          python -m pip install --user pipx
-          python -m pipx ensurepath
-          pipx install poetry
+          # Use explicit Python path from setup-python to avoid PATH pollution
+          ${{ steps.setup-python.outputs.python-path }} -m pip install --user pipx
+          ${{ steps.setup-python.outputs.python-path }} -m pipx ensurepath
+          ${{ steps.setup-python.outputs.python-path }} -m pipx install poetry
         env:
           PIPX_HOME: ${{ runner.temp }}/pipx
           PIPX_BIN_DIR: ${{ runner.temp }}/pipx/bin
@@ -175,16 +183,24 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Clean up leftover Python installations
+        run: |
+          # Remove leftover pipx installations from previous runs
+          rm -rf ${{ runner.temp }}/pipx || true
+        continue-on-error: true
+
       - name: Set up Python ${{ matrix.python-version }}
+        id: setup-python
         uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry via pipx
         run: |
-          python -m pip install --user pipx
-          python -m pipx ensurepath
-          pipx install poetry
+          # Use explicit Python path from setup-python to avoid PATH pollution
+          ${{ steps.setup-python.outputs.python-path }} -m pip install --user pipx
+          ${{ steps.setup-python.outputs.python-path }} -m pipx ensurepath
+          ${{ steps.setup-python.outputs.python-path }} -m pipx install poetry
         env:
           PIPX_HOME: ${{ runner.temp }}/pipx
           PIPX_BIN_DIR: ${{ runner.temp }}/pipx/bin
