--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ dev = [
     "factory-boy (>=3.3.3)",
     "respx (>=0.22.0)",
     "keyrings-codeartifact (>=2.1.2,<3.0.0)",
+    "mkdocs (>=1.6.1,<2.0.0)",
+    "mkdocs-material (>=9.7.0,<10.0.0)",
+    "mkdocstrings[python] (>=1.0.0,<2.0.0)",
+    "mkdocs-gen-files (>=0.6.0,<0.7.0)",
 ]
 test = [
     "pytest-rerunfailures (>=16.1,<17.0)"
