--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,8 @@ markdown_extensions:
 extra:
   version:
     provider: mike
+    default: latest
+    alias: true
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/Jakan-Kink/stash-graphql-client
