--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     -   id: check-merge-conflict
     -   id: check-toml
     -   id: check-yaml
+        args: [--unsafe]
     -   id: debug-statements
     -   id: detect-aws-credentials
     -   id: detect-private-key
