Archive resolved TYPE_VALIDATION_ISSUES.md documentation
Move TYPE_VALIDATION_ISSUES.md to docs/archive/ with completion status.
All 11 categories of type validation issues identified during v0.10.7
investigation have been systematically resolved across v0.10.8-v0.10.10.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -189,3 +189,6 @@ nav:
           - Version: api/client/mixins/version.md
   - Reference:
       - Quick Reference: reference/quick-reference.md
+  - Archive:
+      - Overview: archive/README.md
+      - Type Validation Issues: archive/TYPE_VALIDATION_ISSUES.md
