--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,6 +171,7 @@ ignore = [
     "ARG001", # unused function argument (common in callbacks)
     "ARG002", # unused method argument (common in abstract methods)
     "ARG003", # unused class method argument (common in abstract methods)
+    "UP042",  # str + Enum → StrEnum (scheduled for v0.11.0 refactoring)
     "ARG004", # unused static method argument (common in abstract methods)
     "ARG005", # unused lambda argument (common pattern)
     "PTH123", # pathlib open() (not always better) - TODO: convert incrementally
