feat: add shallow repr, StrEnum migration, and field warnings (v0.11.0b1)
Add shallow __repr__ on StashObject to prevent exponential recursive
expansion with bidirectional relationships. Two-tier system: __repr__()
shows all non-UNSET fields with relationships rendered shallowly,
_short_repr() provides compact nested display (e.g., Tag(name='blonde')).
Configured __short_repr_fields__ on all 11 entity subclasses.

Add StashUnmappedFieldWarning for server-returned fields not declared in
the model (distinct from StashInput's DeprecationWarning for user typos).
Add BaseFile __typename discrimination via model_validator(mode="wrap")
so find_file() returns correctly-typed VideoFile/ImageFile instances.

Migrate 33 string enums from (str, Enum) to StrEnum (Python 3.11+).
Replace manual batching with itertools.batched() in store operations.
Fix Folder fragment requesting deprecated _id fields, StashInput
_warn_extra_fields excluding _-prefixed internal fields, Studio
handle_deprecated_url non-dict guard, and Performer Tag relationship
metadata.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "stash-graphql-client"
-version = "0.10.14"
+version = "0.11.0b1"
 description = "Async Python client for Stash GraphQL API"
 authors = [
     {name = "Jakan",email = "github@jakan.co"}
@@ -171,7 +171,6 @@ ignore = [
     "ARG001", # unused function argument (common in callbacks)
     "ARG002", # unused method argument (common in abstract methods)
     "ARG003", # unused class method argument (common in abstract methods)
-    "UP042",  # str + Enum → StrEnum (scheduled for v0.11.0 refactoring)
     "ARG004", # unused static method argument (common in abstract methods)
     "ARG005", # unused lambda argument (common pattern)
     "PTH123", # pathlib open() (not always better) - TODO: convert incrementally
