fix: selective snapshot update after identity map merge (v0.11.0b2)
Populated fields from server data (via identity map merge or populate())
appeared dirty because the snapshot was never updated after merge. Add
_update_snapshot_for_fields() to selectively update only server-provided
fields, preserving dirty state on user-modified fields.

- Call in _identity_map_validator after merge and at end of populate()
- Add 6 tests, architecture doc, and mkdocs nav entries

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,6 +156,8 @@ nav:
   - Architecture:
       - Overview: architecture/overview.md
       - Identity Map: architecture/identity-map.md
+      - Dirty Tracking: architecture/dirty-tracking.md
+      - Pydantic Internals: architecture/pydantic-internals.md
       - Library Comparisons: architecture/comparison.md
       - Bidirectional Relationships: architecture/bidirectional-relationships.md
       - Diagrams: diagrams.md
